редактирование index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
+	<div>
+		<header>
 
+		</header>
+		<main>
+			<div>
+				<h1>Редактор кода</h1>
+			</div>
+		</main>
+		<footer>
+
+		</footer>
+	</div>
 </body>
 
 </html>
