--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</header>
 		<main>
 			<div>
-				<h1>Идеальный редактор кода для верстки</h1>
+				<h1>VS code идеальный редактор кода для верстки</h1>
 			</div>
 		</main>
 		<footer>
