--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Заголовок</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Document</title>
 </head>
 
 <body>
-	<div>
-		<header class="header">
 
-		</header>
-		<main>
-			<div>
-				<h1>VS code идеальный редактор кода для верстки</h1>
-			</div>
-		</main>
-		<footer>
-
-		</footer>
-	</div>
 </body>
 
 </html>
