--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+	<div class="page-wrapper">
+		<header class="header">
 
+		</header>
+		<Main>
+			<section class="hero section">
+				<div class="container">
+					<h1>Новые маркетинговые направления</h1>
+				</div>
+			</section>
+			<section class="about section">
+				<div class="container">
+					<h2>Заголовок</h2>
+				</div>
+			</section>
+			<section class="services section">
+				<div class="container">
+					<h2>Заголовок</h2>
+				</div>
+			</section>
+		</Main>
+		<footer>
+
+		</footer>
+	</div>
 </body>
 
 </html>
