--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 			</section>
 			<section class="about section">
 				<div class="container">
-					<h2>Заголовок</h2>
+					<h2>Наши услуги</h2>
 				</div>
 			</section>
 			<section class="services section">
 				<div class="container">
-					<h2>Заголовок</h2>
+					<h2>О нас</h2>
 				</div>
 			</section>
 		</Main>
