--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<section class="about section">
 				<div class="container">
 					<h2>Наши услуги</h2>
+					<div class="content">
+						<img src="img/logo__vp-1.svg" class="rotate" />
+					</div>
 				</div>
 			</section>
 			<section class="services section">
@@ -35,6 +38,7 @@
 
 		</footer>
 	</div>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
